[package]
name = "odysseus-desktop"
version = "1.0.0"
description = "Desktop shell for Odysseus"
edition = "2021"
rust-version = "1.77"

[lib]
name = "odysseus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.6"
